feat: loginCaptchaRequired
