# apps/stargate-next/openapi.json
@@ -574,7 +574,7 @@
       },
       "LoginInput": {
         "type": "object",
-        "required": ["login", "password", "captchaId", "captchaCode"],
+        "required": ["login", "password"],
         "properties": {
           "login": { "type": "string" },
           "password": { "type": "string", "writeOnly": true },
@@ -758,11 +758,25 @@
       },
       "Tenant": {
         "type": "object",
-        "required": ["id", "name", "status", "createdAt", "updatedAt"],
+        "required": [
+          "id",
+          "name",
+          "status",
+          "settings",
+          "createdAt",
+          "updatedAt"
+        ],
         "properties": {
           "id": { "type": "string" },
           "name": { "type": ["string", "null"] },
           "status": { "type": "string", "enum": ["active", "disabled"] },
+          "settings": {
+            "type": "object",
+            "additionalProperties": false,
+            "properties": {
+              "loginCaptchaRequired": { "type": "boolean" }
+            }
+          },
           "createdAt": { "type": "string", "format": "date-time" },
           "updatedAt": { "type": "string", "format": "date-time" }
         }
@@ -776,7 +790,14 @@
             "maxLength": 63,
             "pattern": "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
           },
-          "name": { "type": ["string", "null"] }
+          "name": { "type": ["string", "null"] },
+          "settings": {
+            "type": "object",
+            "additionalProperties": false,
+            "properties": {
+              "loginCaptchaRequired": { "type": "boolean" }
+            }
+          }
         }
       },
       "PatchTenantInput": {
@@ -784,7 +805,14 @@
         "additionalProperties": false,
         "properties": {
           "name": { "type": ["string", "null"] },
-          "status": { "type": "string", "enum": ["active", "disabled"] }
+          "status": { "type": "string", "enum": ["active", "disabled"] },
+          "settings": {
+            "type": "object",
+            "additionalProperties": false,
+            "properties": {
+              "loginCaptchaRequired": { "type": "boolean" }
+            }
+          }
         }
       },
       "TenantCollection": {
